<resources>
    <string name="app_name">Chatter</string>
    <string name="send_title_text">Post Chatter</string>
    <string name="edit_text_hint">Type message here</string>
    <string name="button_send_text">Post Chatter</string>
    <string name="button_view_text">View Chatter</string>
    <string name="view_title_text">Last 30 Chats</string>
    <string name="list_view_empty_text">No chatter available</string>
    <string name="preference_user_name_title">Login Name</string>
    <string name="preference_user_name_summary">Set or change your alias</string>
    <string name="preference_user_password_title">Password</string>
    <string name="preference_user_password_summary">Set or change your password</string>
    <string name="preference_main_bg_color_title">Main Background Color</string>
    <string name="preference_main_bg_color_summary">Modify current background color</string>
    <string name="preference_key_user_name">user_name</string>
    <string name="preference_key_password">password</string>
    <string name="preference_key_main_bg_color">main_bg_color</string>
    <string name="color_change_title_text">Choose Background Color</string>
</resources>
