<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_send_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_title_text"
        android:textColor="@color/color_send_title"
        android:textSize="24sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:hint="@string/edit_text_hint"
        android:background="@color/color_edit_text_bg"
        android:id="@+id/edit_text_message"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_send_text"
        android:textSize="16sp"
        android:layout_margin="5dp"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_send"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_view_text"
        android:textSize="16sp"
        android:layout_margin="5dp"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button_view"/>

</LinearLayout>